Maths fixes: intro to python

--- a/notebooks/b_coding/Intro to Python/10_Importing.ipynb
+++ b/notebooks/b_coding/Intro to Python/10_Importing.ipynb
@@ -176,7 +176,7 @@
     "        f = [math.sin, math.cos,math.tan, math.log, random.randrange]\n",
     "```\n",
     "        \n",
-    "He wants to create a program which will take (at random) a function from the list and apply it to the number \\\\(a\\\\). The process should be repeated \\\\(n\\\\) times. Help Mike!"
+    "He wants to create a program which will take (at random) a function from the list and apply it to the number $a$. The process should be repeated $n$ times. Help Mike!"
    ]
   },
   {
