--- a/notebooks/b_coding/Intro to Python/18_Assert.ipynb
+++ b/notebooks/b_coding/Intro to Python/18_Assert.ipynb
@@ -46,7 +46,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What if \\\\(n = 1.5\\\\), \\\\(n = -1\\\\) or \\\\(n \\\\) is not a numeric type? Our function is defined for non-negative integers only. However, for some of those invalid inputs, the function can actually return something! `assert` is a great feature to add here:"
+    "What if $n = 1.5$, $n = -1$ or $n $ is not a numeric type? Our function is defined for non-negative integers only. However, for some of those invalid inputs, the function can actually return something! `assert` is a great feature to add here:"
    ]
   },
   {
@@ -128,7 +128,7 @@
     "\n",
     "* **Perimeter of a circle** Define a function which calculates the perimeter of a circle given its radius.\n",
     "\n",
-    "**HINT**: `import math` for the value of \\\\(\\pi\\\\). Do not assume that `r` is of any particular type."
+    "**HINT**: `import math` for the value of $\\pi$. Do not assume that `r` is of any particular type."
    ]
   },
   {
