--- a/notebooks/b_coding/Intro to Python/2_Variables.ipynb
+++ b/notebooks/b_coding/Intro to Python/2_Variables.ipynb
@@ -147,7 +147,7 @@
    "metadata": {},
    "source": [
     "We can make calculations on numbers stored in variables and program mathematical formulae. For example, a position for a ball in vertical motion is given by:\n",
-    "     \\\\(y(t) = v_0t- \\frac{1}{2}gt^2 \\\\)\n",
+    "     $y(t) = v_0t- \\frac{1}{2}gt^2 $\n",
     "where the ball starts at $y=0$ at time $t=0$ and:\n",
     "\n",
     "* $y$ is the height (position) as a function of time $t$\n",
@@ -476,8 +476,8 @@
     "## Exercises\n",
     "----------------\n",
     "\n",
-    "* **Print** the value of the expression \\\\((a + b - c^4)  \\div  d \\\\) where\n",
-    "\\\\(a=1; b=4; c = 3; d =17\\\\). Check the type of the expression."
+    "* **Print** the value of the expression $(a + b - c^4)  \\div  d $ where\n",
+    "$a=1; b=4; c = 3; d =17$. Check the type of the expression."
    ]
   },
   {
@@ -506,7 +506,7 @@
    "metadata": {},
    "source": [
     "-----------\n",
-    "* **Integer division**: Very popular operators in Computer Science include integer (or *floor*) division `//` and modulus operator `%`. Think what operation combined with type casting can result in integer division. Check the working of your operator using the equality \\\\( div(a, b) * b + a \\% b = a\\\\)  "
+    "* **Integer division**: Very popular operators in Computer Science include integer (or *floor*) division `//` and modulus operator `%`. Think what operation combined with type casting can result in integer division. Check the working of your operator using the equality $ div(a, b) * b + a \\% b = a$  "
    ]
   },
   {
