--- a/notebooks/b_coding/Intro to Python/4_While_loops.ipynb
+++ b/notebooks/b_coding/Intro to Python/4_While_loops.ipynb
@@ -79,7 +79,7 @@
     "\n",
     "* **Write a program** that prints all Fibonacci numbers smaller than 50. An example of a Fibonacci sequence is the following:\n",
     "\n",
-    "\\\\[ F_0 = 0,\\quad F_1 = 1, \\quad F_{n}=F_{n-1}+F_{n-2}.\\\\]"
+    "\n$$ F_0 = 0,\\quad F_1 = 1, \\quad F_{n}=F_{n-1}+F_{n-2}.$$\n"
    ]
   },
   {
@@ -111,9 +111,9 @@
    "source": [
     "-----------\n",
     "\n",
-    "* **Create a `while` loop** to find Celsius temperatures for Fahrenheit temperatures between 20\\\\(^\\circ\\\\)F and 80\\\\(^\\circ\\\\)F at 5\\\\(^\\circ\\\\)F increments. The Fahrenheit-Celsius conversion formula is:\n",
+    "* **Create a `while` loop** to find Celsius temperatures for Fahrenheit temperatures between 20$^\\circ$F and 80$^\\circ$F at 5$^\\circ$F increments. The Fahrenheit-Celsius conversion formula is:\n",
     "\n",
-    "\\\\[ T_{Celsius} = \\frac{5}{9}*(T_{Fahrenheit}-32). \\\\]"
+    "\n$$ T_{Celsius} = \\frac{5}{9}*(T_{Fahrenheit}-32). $$\n"
    ]
   },
   {
