--- a/notebooks/b_coding/Intro to Python/6_For_loops.ipynb
+++ b/notebooks/b_coding/Intro to Python/6_For_loops.ipynb
@@ -160,9 +160,9 @@
     "## Exercises\n",
     "_____________\n",
     "\n",
-    "* **Create a `for` loop** to find Celsius temperatures for Fahrenheit temperatures between 20\\\\(^\\circ\\\\)F and 80\\\\(^\\circ\\\\)F at 5\\\\(^\\circ\\\\)F increments. The Fahrenheit-Celsius conversion formula is:\n",
+    "* **Create a `for` loop** to find Celsius temperatures for Fahrenheit temperatures between 20$^\\circ$F and 80$^\\circ$F at 5$^\\circ$F increments. The Fahrenheit-Celsius conversion formula is:\n",
     "\n",
-    "\\\\[ T_{Celsius} = \\frac{5}{9}*(T_{Fahrenheit}-32).\\\\]"
+    "\n$$ T_{Celsius} = \\frac{5}{9}*(T_{Fahrenheit}-32).$$\n"
    ]
   },
   {
@@ -189,7 +189,7 @@
    "metadata": {},
    "source": [
     "_____________\n",
-    "* **Triangles**: We want to create a triangle of \\\\(n\\\\) rows of numbers which looks as follows:\n",
+    "* **Triangles**: We want to create a triangle of $n$ rows of numbers which looks as follows:\n",
     "\n",
     "        1\n",
     "        1 2\n",
@@ -197,7 +197,7 @@
     "        1 2 3 4 \n",
     "        1 2 3 4 5\n",
     "        \n",
-    "**HINT**: Consider iterating over a range \\\\([1,...n]\\\\)"
+    "**HINT**: Consider iterating over a range $[1,...n]$"
    ]
   },
   {
