--- a/notebooks/b_coding/Intro to Python/7_List_comprehensions.ipynb
+++ b/notebooks/b_coding/Intro to Python/7_List_comprehensions.ipynb
@@ -135,9 +135,9 @@
     "(list_comprehensions_exercises)=\n",
     "## Exercises:\n",
     "_____________\n",
-    "* **Create a list comprehension** to find Celsius temperatures for Fahrenheit temperatures between \\\\(20^\\circ\\\\)F and \\\\(80^\\circ\\\\)F at \\\\(5^\\circ\\\\)F increments. The Fahrenheit-Celsius conversion formula is:\n",
+    "* **Create a list comprehension** to find Celsius temperatures for Fahrenheit temperatures between $20^\\circ$F and $80^\\circ$F at $5^\\circ$F increments. The Fahrenheit-Celsius conversion formula is:\n",
     "\n",
-    "\\\\[ T_{Celsius} = \\frac{5}{9}*(T_{Fahrenheit}-32). \\\\]"
+    "\n$$ T_{Celsius} = \\frac{5}{9}*(T_{Fahrenheit}-32). $$\n"
    ]
   },
   {
@@ -160,7 +160,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* **Create a list** of powers of two \\\\(2^x\\\\) where \\\\(x\\\\) is positive, odd, not divisible by 3 and smaller than 40. Iterate through that list and print the last integer of each element. Numbers tend to show up patterns in such analysis, can you spot one?"
+    "* **Create a list** of powers of two $2^x$ where $x$ is positive, odd, not divisible by 3 and smaller than 40. Iterate through that list and print the last integer of each element. Numbers tend to show up patterns in such analysis, can you spot one?"
    ]
   },
   {
