--- a/notebooks/b_coding/Intro to Python/8_Nested_lists.ipynb
+++ b/notebooks/b_coding/Intro to Python/8_Nested_lists.ipynb
@@ -139,7 +139,7 @@
     "    5 9 6\n",
     "    6 9 4\n",
     "\n",
-    "The middle cell with \\\\(9\\\\) inside satisfies the local peak condition.\n",
+    "The middle cell with $9$ inside satisfies the local peak condition.\n",
     "\n",
     "Return a list of coordinates with local peaks, do not consider the edge cells (but use them in determining other peaks). Good luck General!\n"
    ]
