--- a/notebooks/b_coding/Intro to Python/12_Tuples.ipynb
+++ b/notebooks/b_coding/Intro to Python/12_Tuples.ipynb
@@ -73,7 +73,7 @@
     "--------------\n",
     "* **Define a function** which will return both maximum and minimum in terms of lexicographical order of a list consisting of tuples (pairs).\n",
     "\n",
-    "**HINT**: in lexicographical order \\\\((a_1,b_1) > (a_2,b_2)\\\\) if and only if \\\\(a_1 > a_2\\\\) or \\\\((a_1 = a_2\\\\) and \\\\(b_1 > b_2) \\\\)"
+    "**HINT**: in lexicographical order $(a_1,b_1) > (a_2,b_2)$ if and only if $a_1 > a_2$ or $(a_1 = a_2$ and $b_1 > b_2) $"
    ]
   },
   {
