Documentation fixes for maths rendering

--- a/notebooks/e_extra/contributors_guide.ipynb
+++ b/notebooks/e_extra/contributors_guide.ipynb
@@ -141,10 +141,10 @@
     "\n",
     "### In-line equations\n",
     "\n",
-    "If you would like to include in-line equation in the Markdown text, e.g. to explain that area \\\\(A=\\pi r^2\\\\), you should follow this syntax:\n",
+    "If you would like to include in-line equation in the Markdown text, e.g. to explain that area $A=\\pi r^2$, you should follow this syntax:\n",
     "\n",
     "```\n",
-    "Your text goes here \\\\(A = \\pi r^2\\\\) and more text here.\n",
+    "Your text goes here $A = \\pi r^2$ and more text here.\n",
     "```\n",
     "\n",
     "Equations use standard LaTeX syntax. For some examples how to write equations in LaTeX, look [here](https://en.wikibooks.org/wiki/LaTeX/Mathematics). For a comprehensive list with math symbols look [here](https://oeis.org/wiki/List_of_LaTeX_mathematical_symbols).\n",
@@ -153,58 +153,55 @@
     "### Math blocks\n",
     "If you would like your equation to display in the next line and centred, e.g. the area of a circle is\n",
     "\n",
-    "\\\\[A=\\pi r^2,\\\\]\n",
+    "$$A=\\pi r^2,$$\n",
     "\n",
     "follow this syntax:\n",
     "\n",
     "```\n",
     "Your text goes here and then:\n",
     "\n",
-    "\\\\[A=\\pi r^2,\\\\]\n",
+    "$$A=\\pi r^2,$$\n",
     "\n",
     "more of your text goes here.\n",
     "\n",
     "```\n",
     "\n",
     "For multiple line equations, e.g. \n",
-    "\\\\[A=\\pi r^2,\\\\\\\\\\\\\n",
-    "r = 15 \\implies A = 706.5.\\\\]\n",
+    "$$A=\\pi r^2,\\\\\n",
+    "r = 15 \\implies A = 706.5.$$\n",
     "\n",
-    "use six backslashes to create the next line:\n",
+    "use two backslashes to create the next line:\n",
     "\n",
     "```\n",
-    "\\\\[A=\\pi r^2,\\\\\\\\\\\\\n",
-    "r = 15 \\implies A = 706.5.\\\\]\n",
+    "$$A=\\pi r^2,\\\\\n",
+    "r = 15 \\implies A = 706.5.$$\n",
     "```\n",
     "\n",
     "You may wish to use special LaTeX blocks, e.g. to create a matrix\n",
     "\n",
-    "\\\\[\n",
+    "$$\n",
     "\\begin{pmatrix}\n",
-    "1 & 2\\\\\\\\\\\\\n",
-    "5 & 6\\\\\\\\\\\\\n",
+    "1 & 2\\\\\n",
+    "5 & 6\n",
     "\\end{pmatrix}\n",
-    "\\\\]\n",
+    "$$\n",
     "\n",
-    "you can use LaTeX macros, however, remember to use six backslashes within the macro:\n",
+    "you can use LaTeX macros, however, remember to use backslashes to create new-lines within the macro:\n",
     "\n",
     "```\n",
-    "\\\\[\n",
+    "$$\n",
     "\\begin{pmatrix}\n",
-    "1 & 2\\\\\\\\\\\\\n",
-    "5 & 6\\\\\\\\\\\\\n",
+    "1 & 2\\\\\n",
+    "5 & 6\n",
     "\\end{pmatrix}\n",
-    "\\\\]\n",
+    "$$\n",
     "```\n",
     "\n",
     "````{admonition} Notes on equation style\n",
     "* Please use appropriate punctuation around equations, do not forget to put a full stop when equation ends a sentence.\n",
     "* Break down long equations into more lines.\n",
     "* Do not copy special characters from other websites, find a LaTeX symbol that can be used to create such a character.\n",
-    "* In worst case scenario, if you can't make the equation work on the website with `\\\\[\\\\]` syntax, use the standard LaTeX syntax:\n",
-    "```\n",
-    "$$ A=\\pi r^2 $$\n",
-    "```\n",
+    "* Default to using the ```$$ ... $$``` syntax, as while Jupyter notebook is robust at rendering maths in different forms, the Jupyter book tends to behave more nicely with the ```$$...$$``` environments.\n",
     "````"
    ]
   },
@@ -465,7 +462,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -479,7 +476,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.8"
   }
  },
  "nbformat": 4,
