Fix punctuation inconsistencies

--- a/notebooks/c_mathematics/calculus/Vector_Calculus_MM3.ipynb
+++ b/notebooks/c_mathematics/calculus/Vector_Calculus_MM3.ipynb
@@ -24,7 +24,7 @@
     "\n",
     "For example, if $f(t)$ represents a real function of $t$, then vector function of $t$ would be:\n",
     "\n",
-    "$$ \\mathbf{F}(t)=[f_x(t), f_y(t), f_z(t)] $$\n",
+    "$$ \\mathbf{F}(t)=[f_x(t), f_y(t), f_z(t)]. $$\n",
     "\n",
     "We can visualise a vector in Cartesian (x, y, z) cooridante system as an arrow beginning at the origin and ending at point specified by the vector:"
    ]
@@ -91,7 +91,7 @@
     "\n",
     "Describe the shape of the geometric representation of the vector function given by\n",
     "\n",
-    "$$ \\mathbf{F}(t)=[t+(t/10)\\sin{t}, t+(t/10)\\cos{t}] $$"
+    "$$ \\mathbf{F}(t)=[t+(t/10)\\sin{t}, t+(t/10)\\cos{t}] \\text{.} $$"
    ]
   },
   {
@@ -173,13 +173,13 @@
     "```\n",
     "To differentiate vector functions, we need to take derivatives of its components:\n",
     "\n",
-    "$$ \\frac{d\\mathbf{F}}{dt}=\\Big(\\frac{df_x}{dt}, \\frac{df_y}{dt}, \\frac{df_z}{dt}\\Big) $$\n",
+    "$$ \\frac{d\\mathbf{F}}{dt}=\\Big(\\frac{df_x}{dt}, \\frac{df_y}{dt}, \\frac{df_z}{dt}\\Big) \\text{.} $$\n",
     "\n",
     "**Example:**\n",
     "\n",
     "Let's find the derivative of $\\mathbf{F}(t)=[t+(t/10)\\sin{t}, t+(t/10)\\cos{t}]$ with respect to $t$. We will differentiate each component to get:\n",
     "\n",
-    "$$ \\frac{d\\mathbf{F}}{dt}=\\Big[\\Big(1+\\frac{1}{10}\\sin{t}+\\frac{t}{10}\\cos{t}\\Big), \\Big(1+\\frac{1}{10}\\cos{t}-\\frac{t}{10}\\sin{t}\\Big) \\Big] $$\n",
+    "$$ \\frac{d\\mathbf{F}}{dt}=\\Big[\\Big(1+\\frac{1}{10}\\sin{t}+\\frac{t}{10}\\cos{t}\\Big), \\Big(1+\\frac{1}{10}\\cos{t}-\\frac{t}{10}\\sin{t}\\Big) \\Big] \\text{.} $$\n",
     "\n",
     "We can also use [SymPy](https://www.sympy.org/en/index.html) package for Python that allows symbolic mathematics. With this package we can get analytical solutions to derivatives in this example. At first we can create separate derivatives:\n",
     "\n",
@@ -262,7 +262,7 @@
     "\n",
     "For that, we will use the position vector $\\mathbf{r}$.  Letting $\\mathbf{F}(t)=\\mathbf{r}(t):$\n",
     "\n",
-    "$$\\frac{d\\mathbf{F}}{dt}=\\frac{d\\mathbf{r}}{dt}=\\lim_{\\delta t \\rightarrow 0}\\frac{\\mathbf{r}(t+\\delta t)-\\mathbf{r}(t)}{\\delta t}=\\Big(\\frac{dx}{dt}, \\frac{dy}{dt}, \\frac{dz}{dt}\\Big)$$\n",
+    "$$\\frac{d\\mathbf{F}}{dt}=\\frac{d\\mathbf{r}}{dt}=\\lim_{\\delta t \\rightarrow 0}\\frac{\\mathbf{r}(t+\\delta t)-\\mathbf{r}(t)}{\\delta t}=\\Big(\\frac{dx}{dt}, \\frac{dy}{dt}, \\frac{dz}{dt}\\Big) \\text{.}$$\n",
     "\n",
     "Let's find tangent $\\mathbf{t}(t)$ to the curve created by $\\mathbf{r}(t)=[10+5\\sin{t}, 10+5\\cos{t}]$ as $t$ goes from 0 to $2\\pi$."
    ]
@@ -340,7 +340,7 @@
    "source": [
     "Unit tangent $\\hat{\\mathbf{t}}$ to the curve $C$ can be defined as:\n",
     "\n",
-    "$$ \\hat{\\mathbf{t}}=\\frac{d\\mathbf{r}/dt}{|d\\mathbf{r}/dt|} $$\n",
+    "$$ \\hat{\\mathbf{t}}=\\frac{d\\mathbf{r}/dt}{|d\\mathbf{r}/dt|} \\text{.}$$\n",
     "\n",
     "Unit tangent is a vector in the same direction as vector derivative but its length is one."
    ]
@@ -439,7 +439,7 @@
     "\n",
     "For example, let's plot a scalar field:\n",
     "\n",
-    "$$f(x,y,z)=ze^{-xy}$$"
+    "$$f(x,y,z)=ze^{-xy} \\text{.}$$"
    ]
   },
   {
@@ -788,7 +788,7 @@
    "source": [
     "Scalar field $\\Omega$ will vary at different rate in different directions. The _directional derivative_ of a unit vector $\\hat{\\mathbf{a}}$ is:\n",
     "\n",
-    "$$ \\frac{\\partial \\Omega }{\\partial a}=\\hat{\\mathbf{a}}\\cdot\\nabla\\Omega $$\n",
+    "$$ \\frac{\\partial \\Omega }{\\partial a}=\\hat{\\mathbf{a}}\\cdot\\nabla\\Omega \\text{.}$$\n",
     "\n",
     "For example, we are given scalar field $\\Omega = x^2yz+4xz^2$ and we would like to know its derivative in the direction of $\\mathbf{a}=(2,-1,-1)$ at point $P=(1,-2,-1)$.\n",
     "\n",
@@ -1138,7 +1138,7 @@
     "```\n",
     "Laplacian is defined as:\n",
     "\n",
-    "$$\\nabla^2 = \\nabla\\cdot\\nabla=\\frac{\\partial^2}{\\partial x^2}$$\n",
+    "$$\\nabla^2 = \\nabla\\cdot\\nabla=\\frac{\\partial^2}{\\partial x^2} \\text{.}$$\n",
     "\n",
     "Laplacian can operate on both scalar and vector fields. For a vector field, it is defined as:\n",
     "\n",
