--- a/notebooks/c_mathematics/differential_equations/7_pde_first_order.ipynb
+++ b/notebooks/c_mathematics/differential_equations/7_pde_first_order.ipynb
@@ -136,7 +136,7 @@
     "\n",
     "Let $w = -3x$. Then,\n",
     "\n",
-    "$$ f(w) = \\cos (-w/3) $$\n",
+    "$$ f(w) = \\cos (-w/3) \\text{.}$$\n",
     "\n",
     "Hence the solution is\n",
     "\n",
