--- a/notebooks/c_mathematics/mathematical_notation/Tensors_Review.ipynb
+++ b/notebooks/c_mathematics/mathematical_notation/Tensors_Review.ipynb
@@ -114,7 +114,7 @@
     "    \\begin{cases}\n",
     "        1 & \\mbox{($i = j$)} \\\\ \n",
     "        0 & \\mbox{($i \\neq j$)} \n",
-    "    \\end{cases} \n",
+    "    \\end{cases}\n",
     "$$\n",
     "\n",
     "The values can be arranged into a 2x2 matrix, which will be identical to the identity matrix. Kronecker delta can be also expressed as $\\delta_{ij}=\\mathbf{\\hat{e}}_i\\cdot\\mathbf{\\hat{e}}_j$.\n",
@@ -135,9 +135,9 @@
     "\n",
     "**Cross product** $\\boldsymbol{c}$ of two vectors $\\boldsymbol{a}$ and $\\boldsymbol{b}$ in tensor notation can be expressed as:\n",
     "\n",
-    "$$ c_k \\mathbf{\\hat{e}}_k=\\mathbf{c} = \\mathbf{a}\\times\\mathbf{b} = (a_i\\mathbf{\\hat{e}}_i)\\times (b_j\\mathbf{\\hat{e}}_j)=a_ib_j(\\mathbf{\\hat{e}}_i\\times\\mathbf{\\hat{e}}_j)\\parallel\\cdot \\mathbf{\\hat{e}}_k$$\n",
+    "$$ c_k \\mathbf{\\hat{e}}_k=\\mathbf{c} = \\mathbf{a}\\times\\mathbf{b} = (a_i\\mathbf{\\hat{e}}_i)\\times (b_j\\mathbf{\\hat{e}}_j)=a_ib_j(\\mathbf{\\hat{e}}_i\\times\\mathbf{\\hat{e}}_j)\\parallel\\cdot \\mathbf{\\hat{e}}_k \\text{.}$$\n",
     "\n",
-    "$$c_k \\mathbf{\\hat{e}}_k\\cdot\\mathbf{\\hat{e}}_k=c_k=a_i b_j (\\mathbf{\\hat{e}}_i\\times\\mathbf{\\hat{e}}_j)\\cdot\\mathbf{\\hat{e}}_k $$\n",
+    "$$c_k \\mathbf{\\hat{e}}_k\\cdot\\mathbf{\\hat{e}}_k=c_k=a_i b_j (\\mathbf{\\hat{e}}_i\\times\\mathbf{\\hat{e}}_j)\\cdot\\mathbf{\\hat{e}}_k \\text{.}$$\n",
     "\n",
     "The Levi-Civita symbol is then equal to $\\varepsilon_{ijk} = (\\mathbf{\\hat{e}}_i\\times\\mathbf{\\hat{e}}_j)\\cdot\\mathbf{\\hat{e}}_k$ and in general, cross product can be expressed in tensor notation as - \n",
     "\n",
