--- a/notebooks/c_mathematics/numerical_methods/1_Interpolation_curve_fitting.ipynb
+++ b/notebooks/c_mathematics/numerical_methods/1_Interpolation_curve_fitting.ipynb
@@ -352,7 +352,7 @@
     "y_0\\\\\n",
     "\\vdots \\\\\n",
     "y_1\n",
-    "\\end{pmatrix}\n",
+    "\\end{pmatrix}.\n",
     "$$\n",
     "\n",
     "Note that we can also interpret this as a linear combination of a *basis* made up of single-term polynomials:\n",
@@ -749,15 +749,15 @@
     "\n",
     "A first degree polynomial function is basically a straight line, and is written in the form of:\n",
     "\n",
-    "$$ y = mx + c$$\n",
+    "$$ y = mx + c \\text{.}$$\n",
     "\n",
     "A second degree polynominal function is basically a curve with a single bend, and is written in the form of:\n",
     "\n",
-    "$$ y = ax^2 + bx + c$$\n",
+    "$$ y = ax^2 + bx + c \\text{.}$$\n",
     "\n",
     "A 3 degree polynominal function is a curve with two bends, and is written in the form of:\n",
     "\n",
-    "$$ y = ax^3 + bx^2 + cx + d$$\n",
+    "$$ y = ax^3 + bx^2 + cx + d \\text{.}$$\n",
     "\n",
     "Thus, a polynominal function of $n$ degree is a curve with $n-1$ bends."
    ]
