--- a/notebooks/c_mathematics/numerical_methods/2_Numerical_differentiation.ipynb
+++ b/notebooks/c_mathematics/numerical_methods/2_Numerical_differentiation.ipynb
@@ -269,7 +269,7 @@
     "\n",
     "$$ f(x_0+h) = f(x_0) + hf'(x_0) + \\frac{h^2}{2!}f''(x_0) + \\frac{h^3}{3!}f'''(x_0) + \\ldots $$\n",
     "\n",
-    "$$ = f(x_0)+hf'(x_0) + \\frac{h^2}{2!}f''(x_0) + \\mathcal{O}(h^3) $$\n",
+    "$$ = f(x_0)+hf'(x_0) + \\frac{h^2}{2!}f''(x_0) + \\mathcal{O}(h^3) \\text{,}$$\n",
     "\n",
     "where $\\mathcal{O}(h^3)$ represents the collection of terms that are third-order in $h$ or higher. We call this the Taylor series expansion about (or around) the point $x_0$ (since all the functions in the expansion on the RHS are evaluated at this point). An equivalent way of writing this expansion would be (just define $x$ to be $x_0+h$)\n",
     "\n",
