--- a/notebooks/c_mathematics/numerical_methods/5_Runge_Kutta_method.ipynb
+++ b/notebooks/c_mathematics/numerical_methods/5_Runge_Kutta_method.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "Consider a continuous function $f(x,y)$, where $x$ is the independent variable and $y$ is the dependent variable -\n",
     "\n",
-    "$$\\frac{dy}{dx}=f(x,y)$$\n",
+    "$$\\frac{dy}{dx}=f(x,y)\\text{.}$$\n",
     "\n",
     "Our aim is to find $y(x)$ and to achieve that, we need to:\n",
     "* know the value of $y=y_0$ at some initial value of $x=x_0$\n",
@@ -23,7 +23,7 @@
     "\n",
     "In RK4 method, the independent variable is incremented in steps and the new value for the dependent variable is calculated at the end of each step according to -\n",
     "\n",
-    "$$y_{i+1} = y_i + \\frac{1}{6}(k_1+2k_2+2k_3+k_4)$$\n",
+    "$$y_{i+1} = y_i + \\frac{1}{6}(k_1+2k_2+2k_3+k_4)\\text{,}$$\n",
     "\n",
     "$$x_{i+1} = x_i + \\Delta x,$$\n",
     "\n",
@@ -240,7 +240,7 @@
     "$$\\frac{dy}{dx}=\\frac{1}{xy}$$\n",
     "\n",
     "numerically with Runge-Kutta method. We will assume again that $x_0 = 1$, $y_0=1$, $\\Delta x=0.1$ and \n",
-    "$x_{end}=2.$. The analytical solution to this example is\n",
+    "$x_{\\text{end}}=2.$. The analytical solution to this example is\n",
     "\n",
     "$$\\sqrt{1+2\\log{x}}.$$\n",
     "\n",
