--- a/notebooks/d_geosciences/Waves/Introduction_To_Waves.ipynb
+++ b/notebooks/d_geosciences/Waves/Introduction_To_Waves.ipynb
@@ -237,7 +237,7 @@
     "\n",
     "Thus, \n",
     "\n",
-    "$$a = \\frac{F}{ml}y$$ (tussenstap)\n",
+    "$$a = \\frac{F}{ml}y \\text{.}$$ (tussenstap)\n",
     "\n",
     "If the restoring force is tension from a string for example, it can be approximated as $F=-2T$, considering a string pulls the body from the left and right side.\n",
     "\n",
