--- a/notebooks/c_mathematics/basic_maths/2_sets.ipynb
+++ b/notebooks/c_mathematics/basic_maths/2_sets.ipynb
@@ -53,7 +53,7 @@
     "\n",
     "A set of **natural numbers** $\\mathbb{N}$ is one such set whose elements are natural numbers $0, 1, 2, \\dots $, i.e. \n",
     "\n",
-    "$$\\mathbb{N} = \\{0, 1, 2, \\dots \\}$$\n",
+    "$$\\mathbb{N} = \\{0, 1, 2, \\dots \\}. $$\n",
     "\n",
     "\n",
     "```{margin} [(Extra) Peano axioms](https://en.wikipedia.org/wiki/Peano_axioms)\n",
