Fix prompts for demo examples

--- a/notebooks/demo/RK-chemistry.ipynb
+++ b/notebooks/demo/RK-chemistry.ipynb
@@ -342,10 +342,22 @@
     "\n",
     "$$ A \\rightarrow B, $$\n",
     "\n",
-    "model the concentration of the reactants and products ($ [A], [B] $) as a function of time for the interval $[0, 5]$, given the rate constant $k = 0.05 s^{-1}$. \n",
+    "model the concentration of the reactants and products ($ [A], [B] $) as a function of time for 1 minute, given the rate constant $k = 0.05 s^{-1}$. \n",
     "\n",
     "$$ \\frac{d[A]}{dt} = -k[A] $$\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3b594e0c",
+   "metadata": {
+    "tags": [
+     "hide-input",
+     "chemistry-example"
+    ]
+   },
+   "source": [
     "Reference: https://chem.libretexts.org/Bookshelves/Physical_and_Theoretical_Chemistry_Textbook_Maps/Mathematical_Methods_in_Chemistry_(Levitus)/04%3A_First_Order_Ordinary_Differential_Equations/4.03%3A_Chemical_Kinetics"
    ]
   },
