--- a/notebooks/demo/RK-physics.ipynb
+++ b/notebooks/demo/RK-physics.ipynb
@@ -342,7 +342,7 @@
     "\n",
     "$$ \\frac{dT}{dt} = -k(T-T_s) $$\n",
     "\n",
-    "given the coefficient of heat transfer $k = 3240 W m^{-2} K^{-1}$."
+    "given the coefficient of heat transfer $k = 0.0324 s^{-1} K^{-1}$."
    ]
   },
   {
